Face inset problem #60226

Closed
opened 2019-01-06 08:00:26 +01:00 by Leonid · 10 comments

System Information
Operating system:
Kubuntu 18.04 LTS, x64 (nvidia-driver-390)
Graphics card:
NVIDIA GeForce GTX 1080

Blender Version
Broken:
2.80, 4b7596ec91, blender2.8, 2019-01-05

Short description of error
Perhaps this is not a Blender bug, I could not understand. I can not insert a face at the bottom of this model, on top of the model, the face is inserted perfectly. The essence of the problem can be seen in the video. The file with the model is attached.

Exact steps for others to reproduce the error
https://youtu.be/Uh9qQeiB7m0
bug_with_face_insertion.blend

**System Information** Operating system: Kubuntu 18.04 LTS, x64 (nvidia-driver-390) Graphics card: NVIDIA GeForce GTX 1080 **Blender Version** Broken: 2.80, 4b7596ec914e, blender2.8, 2019-01-05 **Short description of error** Perhaps this is not a Blender bug, I could not understand. I can not insert a face at the bottom of this model, on top of the model, the face is inserted perfectly. The essence of the problem can be seen in the video. The file with the model is attached. **Exact steps for others to reproduce the error** https://youtu.be/Uh9qQeiB7m0 [bug_with_face_insertion.blend](https://archive.blender.org/developer/F6195889/bug_with_face_insertion.blend)
Author

Added subscriber: @ljonya

Added subscriber: @ljonya
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Seems to be somewhat dependent on scale (precission issue). If I scale it up in eitmode 10 times, inset seems to behave normally...
Confirming for now...

I guess @ideasman42 would know right away...

Seems to be somewhat dependent on scale (precission issue). If I scale it up in eitmode 10 times, inset seems to behave normally... Confirming for now... I guess @ideasman42 would know right away...
Philipp Oeser changed title from Face insertion problem to Face inset problem 2019-01-07 09:56:26 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Looks like everything is working as it should, except that the default thickness for Inset is 10mm. This is way to large for this small object. If you reduce it by moving the mouse away from the face center, it behaves normally.
The fix is probably to make the default thickness dependent on the selected face size.

Looks like everything is working as it should, except that the default thickness for Inset is 10mm. This is way to large for this small object. If you reduce it by moving the mouse away from the face center, it behaves normally. The fix is probably to make the default thickness dependent on the selected face size.
Author

@JacquesLucke Alas, nothing is working as it should. The face should not be inserted at all properly. I can make another video, or you can try it yourself to explore what comes out of it.

@JacquesLucke Alas, nothing is working as it should. The face should not be inserted at all properly. I can make another video, or you can try it yourself to explore what comes out of it.
Member

inset.gif

![inset.gif](https://archive.blender.org/developer/F6293942/inset.gif)
Author

@JacquesLucke I'm sorry. I take back my words. However, this is not the correct behavior of blender, this should not be. Thank you!

@JacquesLucke I'm sorry. I take back my words. However, this is not the correct behavior of blender, this should not be. Thank you!
Jacques Lucke self-assigned this 2019-01-28 17:29:26 +01:00

This issue was referenced by 3b6e4cf7ce

This issue was referenced by 3b6e4cf7cec8845cf839f10d241c1dcc81eb98b2
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60226
No description provided.